Proof of concept scripts added

--- a/client-side/config
+++ b/client-side/config
@@ -3,5 +3,12 @@
 #
 #
 
-REMOTE_HOST=''
-HTTP_HOSTNAME=''
+REMOTE_FILE='http://www.example.com/largefile'
+HTTP_HOSTNAME='www.example.co.uk'
+
+
+MAX_CHUNK_SIZE=6553600 # Maximum chunk size to request (bytes, default is 6553600bytes/50MB)
+MAX_REQUESTS=100 # Maximum number of requests to make per session
+RANDOMIZE_CHUNKSIZE="y" # Set this to n if you want to use the same size chunk-size throughout a session
+
+SEED_INTERVAL=15 # After how many requests should RANDOM be reseeded?
