--- a/server-side/config
+++ b/server-side/config
@@ -3,5 +3,6 @@
 #
 #
 
-MIN_SIZE='1' # MB
-MAX_SIZE='300' # MB
+OUTPUT_FILE='/path/to/some/file' # The file to write the data into
+DATA_SOURCE='/dev/urandom' # Where to get the data from
+
