Added ability to temporarily disable via lockfile

--- a/client-side/config
+++ b/client-side/config
@@ -3,6 +3,10 @@
 #
 #
 
+
+# To disable the script temporarily, simply create a file at the location below
+LOCKFILE='/tmp/haystackfile.lock'
+
 # Endpoint configuration
 REMOTE_FILE='http://www.example.com/largefile'
 HTTP_HOSTNAME='www.example.co.uk'
