Added ability to configure the maximum delay between requests

--- a/client-side/config
+++ b/client-side/config
@@ -17,6 +17,7 @@ MAX_CHUNK_SIZE=6553600 # Maximum chunk size to request (bytes, default is 655360
 MAX_REQUESTS=100 # Maximum number of requests to make per session
 RANDOMIZE_CHUNKSIZE="y" # Set this to n if you want to use the same size chunk-size throughout a session
 USER_AGENT='HaystackGen V0.1'
+MAX_DELAY=5 # What should the maximum delay between requests be?
 
 # Data uploads
 SEND_DATA="y" # Should random data also be sent upstream?
