--- a/client-side/config
+++ b/client-side/config
@@ -20,7 +20,7 @@ USER_AGENT='HaystackGen V0.1'
 MAX_DELAY=5 # What should the maximum delay between requests be?
 
 # Data uploads
-SEND_DATA="y" # Should random data also be sent upstream?
+SEND_DATA="r" # Should random data also be sent upstream? (values - y/n/r) Setting to r gives a 1/2 chance of it being a y
 MAX_UPSTREAM="655360" # Data will be a stream of chars, so 1 = 1 byte, take your upstream speeds into consideration
 RANDOMIZE_US_CHUNKSIZE="y" # Set this to n to use the same size upstream chunks per session
 
